--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
+		"dev:test": "vite --port 50789 --mode test",
 		"build": "tsc && vite build",
 		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
 		"preview": "vite preview",
@@ -24,7 +25,6 @@
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.0",
 		"date-fns": "^3.2.0",
-		"happy-dom": "^14.7.1",
 		"localforage": "^1.10.0",
 		"lucide-react": "^0.311.0",
 		"match-sorter": "^6.3.3",
@@ -55,6 +55,8 @@
 		"eslint": "^8.56.0",
 		"eslint-plugin-react": "^7.33.2",
 		"eslint-plugin-simple-import-sort": "^10.0.0",
+		"happy-dom": "^14.7.1",
+		"msw": "^2.2.14",
 		"postcss": "^8.4.33",
 		"prettier": "^3.2.4",
 		"prettier-plugin-tailwindcss": "^0.5.11",
@@ -62,5 +64,10 @@
 		"typescript": "^5.2.2",
 		"vite": "^5.0.8",
 		"vitest": "^1.5.0"
+	},
+	"msw": {
+		"workerDirectory": [
+			"public"
+		]
 	}
 }
